--- a/project/Untitled.ipynb
+++ b/project/Untitled.ipynb
@@ -507,150 +507,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 1,
    "id": "14f233dc",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>#</th>\n",
-       "      <th>Name</th>\n",
-       "      <th>Type 1</th>\n",
-       "      <th>Type 2</th>\n",
-       "      <th>Total</th>\n",
-       "      <th>HP</th>\n",
-       "      <th>Attack</th>\n",
-       "      <th>Defense</th>\n",
-       "      <th>Sp. Atk</th>\n",
-       "      <th>Sp. Def</th>\n",
-       "      <th>Speed</th>\n",
-       "      <th>Generation</th>\n",
-       "      <th>Legendary</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>432</th>\n",
-       "      <td>387</td>\n",
-       "      <td>Turtwig</td>\n",
-       "      <td>Grass</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>318</td>\n",
-       "      <td>55</td>\n",
-       "      <td>68</td>\n",
-       "      <td>64</td>\n",
-       "      <td>45</td>\n",
-       "      <td>55</td>\n",
-       "      <td>31</td>\n",
-       "      <td>4</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>433</th>\n",
-       "      <td>388</td>\n",
-       "      <td>Grotle</td>\n",
-       "      <td>Grass</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>405</td>\n",
-       "      <td>75</td>\n",
-       "      <td>89</td>\n",
-       "      <td>85</td>\n",
-       "      <td>55</td>\n",
-       "      <td>65</td>\n",
-       "      <td>36</td>\n",
-       "      <td>4</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>434</th>\n",
-       "      <td>389</td>\n",
-       "      <td>Torterra</td>\n",
-       "      <td>Grass</td>\n",
-       "      <td>Ground</td>\n",
-       "      <td>525</td>\n",
-       "      <td>95</td>\n",
-       "      <td>109</td>\n",
-       "      <td>105</td>\n",
-       "      <td>75</td>\n",
-       "      <td>85</td>\n",
-       "      <td>56</td>\n",
-       "      <td>4</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>435</th>\n",
-       "      <td>390</td>\n",
-       "      <td>Chimchar</td>\n",
-       "      <td>Fire</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>309</td>\n",
-       "      <td>44</td>\n",
-       "      <td>58</td>\n",
-       "      <td>44</td>\n",
-       "      <td>58</td>\n",
-       "      <td>44</td>\n",
-       "      <td>61</td>\n",
-       "      <td>4</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>436</th>\n",
-       "      <td>391</td>\n",
-       "      <td>Monferno</td>\n",
-       "      <td>Fire</td>\n",
-       "      <td>Fighting</td>\n",
-       "      <td>405</td>\n",
-       "      <td>64</td>\n",
-       "      <td>78</td>\n",
-       "      <td>52</td>\n",
-       "      <td>78</td>\n",
-       "      <td>52</td>\n",
-       "      <td>81</td>\n",
-       "      <td>4</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "       #      Name Type 1    Type 2  Total  HP  Attack  Defense  Sp. Atk  \\\n",
-       "432  387   Turtwig  Grass       NaN    318  55      68       64       45   \n",
-       "433  388    Grotle  Grass       NaN    405  75      89       85       55   \n",
-       "434  389  Torterra  Grass    Ground    525  95     109      105       75   \n",
-       "435  390  Chimchar   Fire       NaN    309  44      58       44       58   \n",
-       "436  391  Monferno   Fire  Fighting    405  64      78       52       78   \n",
-       "\n",
-       "     Sp. Def  Speed  Generation  Legendary  \n",
-       "432       55     31           4      False  \n",
-       "433       65     36           4      False  \n",
-       "434       85     56           4      False  \n",
-       "435       44     61           4      False  \n",
-       "436       52     81           4      False  "
-      ]
-     },
-     "execution_count": 58,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'df' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m#Check how generation affects it?\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m gen_one \u001b[38;5;241m=\u001b[39m \u001b[43mdf\u001b[49m[df[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mGeneration\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m1\u001b[39m]\n\u001b[0;32m      3\u001b[0m gen_two \u001b[38;5;241m=\u001b[39m df[df[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mGeneration\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m2\u001b[39m]\n\u001b[0;32m      4\u001b[0m gen_three \u001b[38;5;241m=\u001b[39m df[df[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mGeneration\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m3\u001b[39m]\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'df' is not defined"
+     ]
     }
    ],
    "source": [
